--- a/USECASE/portfolio.html
+++ b/USECASE/portfolio.html
@@ -20,7 +20,7 @@
                </header>
                <section id="about">
                               <h2>About Me</h2>
-                              <p>Hello! I'm <strong>Prabin JH</strong>, a passionate Full stack Web developer with experience in creating modern and user-friendly websites. My expertise includes front-end and back-end development using the latest technologies.</p>
+                              <p>Hello! I'm <strong>Praveen Kumar Katta</strong>, a passionate Full stack Web developer with experience in creating modern and user-friendly websites. My expertise includes front-end and back-end development using the latest technologies.</p>
                               </section>
                               <section id="skills">
                                              <h2>Skills</h2>
